--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}:latest .
-          docker push ghcr.io/${{ github.repository }}:latest
+          docker build -t ghcr.io/veronikaespa/boozeandbites-vue:latest .
+          docker push ghcr.io/veronikaespa/boozeandbites-vue:latest
 
       - name: Set up kubeconfig for deployment
         run: echo "${{ secrets.KUBECONFIG_LOCAL }}" > kubeconfig && export KUBECONFIG=$PWD/kubeconfig
